# DjangoSinpNomenclature

./: .env.sample  .flake8  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  README.rst  db.sqlite3  pyproject.toml  test.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-labeler.yml  check.yml  codecov.yml  django.yml  documentation.yml  linter.yml  publish.yml  releaser.yml
config/: settings.py  urls.py
docs/: changelog.rst  conf.py  getting_started.md  index.md  index.rst  install.rst  models.md  models.rst
sinp_nomenclatures/: admin.py  apps.py  manager.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
sinp_nomenclatures/fixtures/: initdata.xml  old_sinp_nomenclatures.json  sinp_dict_data_v1.0.json  sinp_nomenclatures.xml
sinp_nomenclatures/locale/fr/LC_MESSAGES/: django.po
sinp_nomenclatures/migrations/: 0001_initial.py  0002_alter_source_unique_together.py  0002_remove_nomenclature_active_nomenclature_status_and_more.py  0003_nomenclature_parents.py  0003_rename_item_nomenclature.py  0004_alter_nomenclature_parents.py  0004_alter_source_options_alter_type_options_and_more.py  0005_remove_nomenclature_created_by_and_more.py  0006_alter_source_options_source_url.py  0007_remove_nomenclature_mnemonic.py  0008_alter_nomenclature_active_and_more.py
tests/fixtures/: test_fixtures.xml
