[tool.poetry]
name = "dj_sinp_nomenclatures"
version = "0.2.1-dev"
description = "Django app to manage french SINP nomenclatures standards"
authors = ["dbChiro project <project@dbchiro.org>"]
license = "AGPLv3"
keywords = ["SINP", "Nomenclatures", "Django", "France", "dbChiroWeb"]
readme = "README.rst"
homepage = "https://github.com/dbchiro/DjangoSinpNomenclature"
repository = "https://github.com/dbchiro/DjangoSinpNomenclature"
include = ["LICENSE"]
packages = [{ include = "sinp_nomenclatures" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = ">=3.2,<5.0"
djangorestframework = ">=3.0,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^5.2"
isort = "^5.9.2"
flake8 = "^6.0.0"
flake8-isort = "^5.0.3"
pre-commit = "^2.13.0"
python-decouple = "^3.4"
psycopg2-binary = "^2.9.1"
drf-yasg = "^1.20.0"
django-fixture-magic = "^0.1.5"
pygraphviz = "^1.10"
django-extensions = "^3.2.1"
flake8-pyproject = "^1.2.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
rstcheck = "^6.1.0"

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py37']


[tool.flake8]
ignore = ['E231', 'E241', 'E501']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 100
count = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
