[tool.poetry]
name = "dj_sinp_nomenclatures"
version = "0.2.5"
description = "Django app to manage french SINP nomenclatures standards"
authors = ["dbChiro project <project@dbchiro.org>"]
license = "AGPLv3"
keywords = ["SINP", "Nomenclatures", "Django", "France", "dbChiroWeb"]
readme = "README.rst"
homepage = "https://github.com/dbchiro/DjangoSinpNomenclature"
repository = "https://github.com/dbchiro/DjangoSinpNomenclature"
include = ["LICENSE"]
packages = [{ include = "sinp_nomenclatures" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = ">=3.2,<5.0"
djangorestframework = ">=3.0,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-isort = "^6.1.1"
pre-commit = "^3.4.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
drf-yasg = "^1.21.7"
django-fixture-magic = "^0.1.5"
pygraphviz = "^1.11"
django-extensions = "^3.2.1"
flake8-pyproject = "^1.2.3"
pylint = "^3.0.3"
pylint-django = "^2.5.5"
dj-database-url = "^2.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
rstcheck = "^6.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']


[tool.flake8]
ignore = ['E231', 'E241', 'E501']
per-file-ignores = ['__init__.py:F401']
max-line-length = 79
count = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
